<resources>
    <string name="app_name">NexschoolApp</string>
    <string name="title_activity_login">Sign in</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing emailcompletions.</string>
    <string name="project_number">294402446315</string>
    <string name="introduction">Welcome! </string>
    <string name="clear_screen">Clear Screen</string>
    <string name="first_launch">First Launch</string>
    <string name="num_of_missed_messages">MissedMessageCount</string>
    <string name="lines_of_message_count">LinesOfMessageCount</string>
    <string name="preferences">PreferencesFile</string>
    <string name="notification_number">1337</string>
    <string name="error_null_cursor">Oops, something went wrong!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_basic">Basic</string>
    <string name="title_activity_zzzzzz">ZZZZZZ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_leave">Leave</string>
    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>
    <string name="connect">Connected</string>
    <string name="disconnect">Disconnected, Please check your internet connection</string>
    <string name="error_connect">Failed to connect</string>
    <string name="message_welcome">Welcome to Socket.IO Chat –</string>
    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>
    <string name="message_user_joined">%s joined</string>
    <string name="message_user_left">%s left</string>
    <string name="user_action_typing">is typing</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="my_timetable">My Timetable</string>
    <string name="class_timetable">Class Timetable</string>
    <string name="employee_timetable">Employee Timetable</string>
    <string name="class_notes">Class Notes</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="week">Week</string>
    <string name="academic_year">ACADEMIC YEAR</string>
    <string name="classes">Class</string>
    <string name="section">Section</string>
    <string name="attendance">Attendance</string>
    <string name="attendance_management">Attendance Management</string>
    <string name="record_class_attendance">Record Class Attendance</string>
    <string name="my_leave">My Leaves</string>
    <string name="submit">SUBMIT</string>
    <string name="overview">Overview</string>
    <string name="status">Status</string>
    <string name="apply_leave">Apply Leave</string>
    <string name="leave_type">Leave Type</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="reason">Reason</string>
    <string name="type_here">Type Here</string>
    <string name="submit_for_approval">SUBMIT FOR APPROVAL</string>
    <string name="leave_applied">Leaves Applied</string>
    <string name="leave_taken">Leave Taken</string>
    <string name="remaining_leaves">Remaining Leaves</string>
    <string name="activities">Activities</string>
    <string name="create_activities">Create Activities</string>
    <string name="past_activities">Past Activities</string>
    <string name="all">All</string>
    <string name="events">Events</string>
    <string name="events_caps">EVENTS</string>
    <string name="comp">Comp</string>
    <string name="ec">EC</string>
    <string name="sea">SEA</string>
    <string name="all_activities">All Activities</string>
    <string name="all_activities_caps">ALL ACTIVITIES</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="homework">Homework</string>
    <string name="filter">Filter</string>
    <string name="add_homework">Add Homework</string>
    <string name="homework_name">Homework name</string>
    <string name="classess">classes</string>
    <string name="classess_caps">Classes</string>
    <string name="subject">Subject</string>
    <string name="type">Type</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter Description</string>
    <string name="due_date">Due Date</string>
    <string name="due_time">Due Time</string>
    <string name="attachments">Attachment</string>
    <string name="notifications">Notifications</string>
    <string name="save_as_draft">SAVE AS DRAFT</string>
    <string name="published">Published</string>
    <string name="draft">Draft</string>
    <string name="details">Details</string>
    <string-array name="albums">
        <item>Sports</item>
        <item>AnnualDay</item>
        <item>Culturals</item>
        <item>Clubs</item>
        <item>ExtraCurricular</item>
        <item>Others</item>
    </string-array>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="fee_management">Fee Management</string>
    <string name="fee_defaulters">Fee Defaulters</string>
    <string name="examinations">Examinations</string>
    <string name="schedule">SCHEDULE</string>
    <string name="portion">PORTION</string>
    <string name="results">RESULTS</string>
    <string name="statistics">STATISTICS</string>
    <string name="hall_of_fame">Hall Of Fame</string>
    <string name="dashboard">Dashboard</string>
    <string name="calendar">Calendar</string>
    <string name="transports">Transport</string>
    <string name="tracking">Tracking</string>
    <string name="more_option">More Options</string>
    <string name="received_notifications">RECEIVED NOTIFICATIONS</string>
    <string name="create_notifications">Create Notification</string>
    <string name="all_notifications">All Notifications</string>
    <string name="created_notify">CREATED NOTIFICATIONS</string>
    <string name="sent">Sent</string>
    <string name="published_by">Published By</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="time_caps">TIME</string>
    <string name="create_title">Create Title</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="students">Students</string>
    <string name="templates">Templates</string>
    <string name="message">Message</string>
    <string name="app">App</string>
    <string name="sms">SMS</string>
    <string name="priority">Priority</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="taxanomy">Taxanomy</string>
    <string name="selected.">Selected</string>
    <string name="not_selected">Not Selected</string>
    <string name="add_file">add File</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="select_photo_album">Select Photo Album</string>
    <string name="transport_management">Transport Management</string>
    <string name="vehicle_info">VEHICLE INFORMATION</string>
    <string name="track_bus">Track Bus</string>
    <string name="route_details">Route Details</string>
    <string name="bus_info">Bus Information</string>
    <string name="vehicle_no">Vehicle No</string>
    <string name="route_name">Route Name</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="location">Location</string>
    <string name="leave_approval">Leave Approval</string>
    <string name="deny">Deny</string>
    <string name="approve">Approve</string>
    <string name="approved">Approved</string>
    <string name="denied">Denied</string>
    <string name="leave_request">Leave Request</string>
    <string name="month">Month</string>
    <string name="notes">Notes</string>
    <string name="attendees">Attendees</string>
    <string name="registered">Registered</string>
    <string name="register">Register</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="past_events">Past Events</string>
    <string name="past_event_details">Past Event Details</string>
    <string name="event_mandatory">This event mandatory to attend</string>
    <string name="competitions">COMPETITIONS</string>
    <string name="extra_curricular">EXTRA-CURRICULAR</string>
    <string name="subject_enrichment">SUBJECT ENRICHMENT ACTIVITY</string>
    <string name="my_events">My Events</string>
    <string name="activity_name">Activity name</string>
    <string name="activity_type">Activity Type</string>
    <string name="duration">Duration</string>
    <string name="add_description">Add description</string>
    <string-array name="categories">
        <item>Academics</item>
        <item>Sports</item>
        <item>Events</item>
    </string-array>
    <string name="mandatory_event">Mandatory event</string>
    <string name="our_school">OUR SCHOOL</string>
    <string name="map">MAP</string>
    <string name="search">Search</string>
    <string name="transport">Transport</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="profile_info">Profile info</string>
    <string name="change_password">Change Password</string>
    <string name="note">Note</string>
    <string name="suggestions">Suggestions</string>
    <string name="teacher_caps">TEACHER</string>
    <string name="teacher">Teacher</string>
    <string name="view_notes">VIEW NOTES</string>
    <string name="holiday_caps">HOLIDAYS</string>
    <string name="holiday">Holidays</string>
    <string name="homework_caps">HOMEWORK</string>
    <string name="calss_caps">CLASS</string>
    <string name="incomplete">Incomplete</string>
    <string name="complete">Complete</string>
    <string name="completed">COMPLETED</string>
    <string name="completed_small">Completed</string>
    <string name="feedback">Please give us your Feedback</string>
    <string name="attendance_percentage">Attendance Percentage</string>
    <string name="no_of_days_present">No of days present : </string>
    <string name="no_of_days_absent">No of days absent : </string>
    <string name="absent_days">Absent Days</string>
    <string name="absent">Absent</string>
    <string name="present">Present</string>
    <string name="pending_fee_caps">PENDING FEES</string>
    <string name="fee_history_caps">FEE HISTORY</string>
    <string name="pending_fee">Pending Fees</string>
    <string name="fee_history">Fee History</string>
    <string name="pay">PAY</string>
    <string name="notification_details">Notification Details</string>
    <string name="approved_leave">Approved Leave</string>
    <string name="declined_leave">Declined Leave</string>
    <string name="notification_">Notification :</string>
    <string name="s_no">S.No</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="upload_notes">UPLOAD NOTES</string>
    <string name="academic_year_">ACADEMIC YEAR (2017-2018)</string>
</resources>