<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/login_bg"
    android:scaleType="fitXY">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whiteWithOpacity"
        android:layout_margin="@dimen/margin10"
        android:gravity="center_vertical">



        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height50"
            android:background="@drawable/login_border"
            android:ems="14"
            android:drawableLeft="@drawable/user_icon"
            android:drawableTint="@color/colorWhite"
            android:foregroundGravity="right"
            android:gravity="start|center_vertical|center"
            android:hint="@string/user_name"
            android:inputType="textEmailAddress|textWebEmailAddress|textAutoComplete|textAutoCorrect"
            android:maxLines="1"
            android:paddingLeft="@dimen/padding10"
            android:layout_marginBottom="6px"
            android:drawablePadding="@dimen/margin10"
            android:singleLine="true"
            android:text="7032068115"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/common_text_size"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height50"
            android:background="@drawable/login_border"
            android:ems="14"
            android:gravity="start|center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:drawableLeft="@drawable/passowrd"
            android:drawablePadding="@dimen/margin10"
            android:drawableTint="@color/colorWhite"
            android:paddingLeft="@dimen/padding10"
            android:singleLine="true"
            android:text="1234"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="@dimen/common_text_size"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:text="@string/action_sign_in_short"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height50"
                android:layout_margin="@dimen/margin15"
                android:textSize="@dimen/common_text_size"
                android:elevation="@dimen/cardElevation3"
                style="@style/signin_button"
                android:textStyle="bold"
                android:id="@+id/signin" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
